# Observability_Platform_for-Real-Time_Market_Data

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COLOR_PALETTE.md  CONTRIBUTING.md  DESIGN_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  run_verify.py  verify_backend.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/screenshots/: README.md
backend/app/: __init__.py  main.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py  telemetry.py
backend/app/middleware/: request_logging.py
backend/app/schemas/: health.py  market.py  orders.py  portfolio.py
backend/app/services/: grafana_service.py  observability_service.py
configs/: config.example.yaml
dashboards/: alerts.json  api_performance.json  executive_overview.json  infrastructure.json  market_dashboard.json  system_logs.json  traces.json
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API_GUIDELINES.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  OBSERVABILITY_REPORT.md  SYSTEM_DESIGN.md  log_samples.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  (+1 more)
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki.yml
monitoring/otel-collector/: otel-collector.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/promtail/: promtail.yml
scratch/: run_verify_to_file.py
tests/: __init__.py  conftest.py  test_config.py  test_delta_rest.py  test_delta_ws.py  test_health.py
(+41 files in other folders)
